--- a/app/src/main/res/layout/activity_profile_info.xml
+++ b/app/src/main/res/layout/activity_profile_info.xml
@@ -9,16 +9,33 @@
     android:paddingTop="5dp"
     android:visibility="visible">
 
-    <TextView
-        android:id="@+id/textName"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Max Mustermann"
-        android:textColor="@android:color/white"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="39dp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingLeft="30dp"
+            android:text="Max Mustermann"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
+            tools:layout_editor_absoluteX="176dp"
+            tools:layout_editor_absoluteY="39dp" />
+
+        <ImageView
+            android:id="@+id/imgEdit"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="5dp"
+            app:srcCompat="@drawable/edit_pencil" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layoutProfile"
@@ -32,18 +49,14 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
-        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/imgProfile"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:scaleType="centerInside"
+            android:layout_height="96dp"
             android:src="@drawable/doctoricon"
-            app:riv_border_color="#333333"
-            app:riv_border_width="2dip"
-            app:riv_corner_radius="30dip"
-            app:riv_mutate_background="true"
-            app:riv_oval="true"
-            app:riv_tile_mode="repeat" />
+            app:civ_border_width="1dp"
+            app:civ_border_color="#FF000000"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -114,7 +127,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textBirth"
+                    android:id="@+id/txtBirth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center" />
