--- a/app/src/main/res/layout/activity_profile_timeline.xml
+++ b/app/src/main/res/layout/activity_profile_timeline.xml
@@ -31,11 +31,14 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
-        <ImageView
-            android:id="@+id/imageProfile"
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/imgProfile"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            app:srcCompat="@drawable/doctoricon" />
+            android:layout_height="96dp"
+            android:src="@drawable/doctoricon"
+            app:civ_border_width="1dp"
+            app:civ_border_color="#FF000000"/>
 
         <TextView
             android:layout_width="wrap_content"
