--- a/app/src/main/res/layout/listed_appointment_info.xml
+++ b/app/src/main/res/layout/listed_appointment_info.xml
@@ -43,7 +43,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imgAppointmentDoctor"
+            android:id="@+id/imgAppointmentPhoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/doctoricon" />
