--- a/app/src/main/res/layout/listed_profiles.xml
+++ b/app/src/main/res/layout/listed_profiles.xml
@@ -14,11 +14,14 @@
         android:layout_weight="3"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imgListedProfile"
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/imgProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/doctoricon" />
+            android:src="@drawable/doctoricon"
+            app:civ_border_width="1dp"
+            app:civ_border_color="#FF000000"/>
     </LinearLayout>
 
     <LinearLayout
