Changes made to import kotlin classes instead of the older ones Also improved ProfilesManager.getAllAppointments() and .getAppointmentsFromDate() for better readability

--- a/app/src/main/res/layout/activity_appointments.xml
+++ b/app/src/main/res/layout/activity_appointments.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="TextView"
+            android:text="Appointments"
             android:textColorLink="#00C94040" />
 
         <ImageButton
