--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -19,9 +20,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="60dp"
@@ -59,8 +60,9 @@
             android:paddingBottom="5dp">
 
             <ImageView
-                android:layout_width="95dp"
-                android:layout_height="105dp"
+                android:id="@+id/img_vaccine"
+                android:layout_width="98dp"
+                android:layout_height="112dp"
                 android:layout_gravity="center"
                 app:srcCompat="@drawable/vaccine_icon" />
 
@@ -86,6 +88,7 @@
             android:paddingBottom="5dp">
 
             <ImageView
+                android:id="@+id/img_health"
                 android:layout_width="95dp"
                 android:layout_height="105dp"
                 android:layout_gravity="center"
@@ -119,6 +122,7 @@
             android:paddingBottom="5dp">
 
             <ImageView
+                android:id="@+id/img_appointments"
                 android:layout_width="95dp"
                 android:layout_height="105dp"
                 android:layout_gravity="center"
@@ -146,7 +150,7 @@
             android:paddingBottom="5dp">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/img_schedule"
                 android:layout_width="95dp"
                 android:layout_height="105dp"
                 android:layout_gravity="center"
@@ -180,7 +184,7 @@
             android:paddingBottom="5dp">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/img_doctor"
                 android:layout_width="95dp"
                 android:layout_height="105dp"
                 android:layout_gravity="center"
